--- a/mysite/package.json
+++ b/mysite/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.1.0",
     "gulp-clean-css": "^3.7.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
+    "jquery": "^3.2.1",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10"
   },
   "scripts": {
@@ -20,6 +24,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "bootstrap": "^3.3.7",
+    "gulp": "^3.9.1",
+    "react-bootstrap": "^0.31.1"
   }
 }
