--- a/mysite/package.json
+++ b/mysite/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel": "^6.23.0",
     "bootstrap": "^3.3.7",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.1.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "gulp": "^3.9.1",
-    "react-bootstrap": "^0.31.1"
+    "react-bootstrap": "^0.31.1",
+    "webpack": "^3.4.1"
   }
 }
